--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "axios": "^0.18.0",
+    "bulma": "^0.7.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1"
   },
